# customer-support-saas

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/architecture/: architecture-explained.md  component-overview.mmd  document-ingestion-flow.mmd  planned-omnichannel.mmd  rag-chat-flow.mmd  security-and-tenancy.mmd
backend/data/: app.db
backend/docs/: README.md  strategic-pitch.md
backend/docs/build-journey/: README.md
backend/scripts/: dev.sh  make_migration.sh  migrate.sh
backend/src/: main.py  models.py
backend/src/api/v1/routers/: agents.py  companies.py  users.py
backend/src/api/v1/schemas/: agent.py  ingestion.py
backend/src/core/: cache.py  clerk_auth.py  config.py  dependencies.py  logging.py  security.py
backend/src/models/: __init__.py
backend/src/services/: document_text.py  embedding_pipeline.py  embeddings.py  ingestion.py  openrouter_agent.py  rag_agent.py  rag_retrieval.py  supabase_storage.py
backend/storage/17cad0b2-e6ae-46a8-9c3c-c4acb40dfc72/: 77513463-7f2f-4f9c-92c2-7c0aa2800d28_notes datcb565_v1_comp3_rubric.docx
backend/storage/f542f089-ab00-4c8a-b4e4-da6b56894306/: 28cc6049-1218-45e1-bf9c-5914413f56d0_Key articles.txt  96ffea68-c0e8-49d6-9058-83a47fc63d9a_Outline.docx  b2ae6307-a415-4707-bed2-7649ccc7fd36_Bureaucracy, Accountability, and Democratic Governance.docx
backend/tests/ingestion_tests/: test_document_ingestion.py
backend/tests/storage_tests/: test_storage_backends.py
docs/: README.md  (+2 more)
(+8 files in other folders)
